--- a/D2D-AliceEngine/Engine/Engine.vcxproj
+++ b/D2D-AliceEngine/Engine/Engine.vcxproj
@@ -140,11 +140,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
+    <ClInclude Include="BitmapRenderer.h" />
     <ClInclude Include="Camera.h" />
-    <ClInclude Include="D2DRenderer.h" />
+    <ClInclude Include="D2DRenderManager.h" />
     <ClInclude Include="Define.h" />
-    <ClInclude Include="DoubleLinkedList.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="IRenderer.h" />
+    <ClInclude Include="TMath.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Singleton.h" />
@@ -152,11 +154,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="BitmapRenderer.cpp" />
     <ClCompile Include="Camera.cpp" />
-    <ClCompile Include="D2DRenderer.cpp" />
+    <ClCompile Include="D2DRenderManager.cpp" />
     <ClCompile Include="Define.cpp" />
-    <ClCompile Include="DoubleLinkedList.cpp" />
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="IRenderer.cpp" />
+    <ClCompile Include="TMath.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
