--- a/D2D-AliceEngine/Engine/Engine.vcxproj
+++ b/D2D-AliceEngine/Engine/Engine.vcxproj
@@ -144,18 +144,23 @@
     <ClInclude Include="Application.h" />
     <ClInclude Include="BitmapRenderer.h" />
     <ClInclude Include="Camera.h" />
-    <ClInclude Include="Interface\IRenderer.h" />
-    <ClInclude Include="Manager\ComponentManager.h" />
+    <ClInclude Include="Component\RenderComponent.h" />
+    <ClInclude Include="Component\ScriptComponent.h" />
+    <ClInclude Include="Component\InputComponent.h" />
+    <ClInclude Include="System\InputSystem.h" />
+    <ClInclude Include="System\ScriptSystem.h" />
+    <ClInclude Include="System\RenderSystem.h" />
     <ClInclude Include="Manager\D2DRenderManager.h" />
     <ClInclude Include="Define.h" />
     <ClInclude Include="framework.h" />
-    <ClInclude Include="Interface\IObject.h" />
-    <ClInclude Include="Interface\IComponent.h" />
+    <ClInclude Include="Object\Object.h" />
+    <ClInclude Include="Component\Component.h" />
+    <ClInclude Include="System\SystemBase.h" />
     <ClInclude Include="Scene\Scene.h" />
     <ClInclude Include="Manager\SceneManager.h" />
     <ClInclude Include="StringHelper.h" />
     <ClInclude Include="TMath.h" />
-    <ClInclude Include="Object\Object.h" />
+    <ClInclude Include="Object\gameObject.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Singleton.h" />
     <ClInclude Include="Transform.h" />
@@ -164,18 +169,23 @@
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="BitmapRenderer.cpp" />
     <ClCompile Include="Camera.cpp" />
-    <ClCompile Include="Interface\IRenderer.cpp" />
-    <ClCompile Include="Manager\ComponentManager.cpp" />
+    <ClCompile Include="Component\RenderComponent.cpp" />
+    <ClCompile Include="Component\ScriptComponent.cpp" />
+    <ClCompile Include="Component\InputComponent.cpp" />
+    <ClCompile Include="System\InputSystem.cpp" />
+    <ClCompile Include="System\ScriptSystem.cpp" />
+    <ClCompile Include="System\RenderSystem.cpp" />
     <ClCompile Include="Manager\D2DRenderManager.cpp" />
     <ClCompile Include="Define.cpp" />
     <ClCompile Include="Engine.cpp" />
-    <ClCompile Include="Interface\IObject.cpp" />
-    <ClCompile Include="Interface\IComponent.cpp" />
+    <ClCompile Include="Object\Object.cpp" />
+    <ClCompile Include="Component\Component.cpp" />
+    <ClCompile Include="System\SystemBase.cpp" />
     <ClCompile Include="Scene\Scene.cpp" />
     <ClCompile Include="Manager\SceneManager.cpp" />
     <ClCompile Include="StringHelper.cpp" />
     <ClCompile Include="TMath.cpp" />
-    <ClCompile Include="Object\Object.cpp" />
+    <ClCompile Include="Object\gameObject.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
