--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
@@ -142,25 +142,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Input\CameraInputContext.h" />
+    <ClInclude Include="Scene\DemoScene.h" />
     <ClInclude Include="D2D-AliceEngine.h" />
     <ClInclude Include="DemoGameApp.h" />
-    <ClInclude Include="Input\EarthInputContext.h" />
     <ClInclude Include="framework.h" />
-    <ClInclude Include="Input\MoonInputContext.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="Input\SunInputContext.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Input\CameraInputContext.cpp" />
+    <ClCompile Include="Scene\DemoScene.cpp" />
     <ClCompile Include="D2D-AliceEngine.cpp" />
     <ClCompile Include="DemoGameApp.cpp" />
-    <ClCompile Include="Input\EarthInputContext.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Input\SunInputContext.cpp" />
-    <ClCompile Include="Input\MoonInputContext.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="D2D-AliceEngine.rc" />
