--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
@@ -142,6 +142,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Scene\DemoScene2.h" />
     <ClInclude Include="Scene\DemoScene.h" />
     <ClInclude Include="D2D-AliceEngine.h" />
     <ClInclude Include="DemoGameApp.h" />
@@ -151,6 +152,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Scene\DemoScene2.cpp" />
     <ClCompile Include="Scene\DemoScene.cpp" />
     <ClCompile Include="D2D-AliceEngine.cpp" />
     <ClCompile Include="DemoGameApp.cpp" />
