--- a/D2D-AliceEngine/Engine/Engine.vcxproj
+++ b/D2D-AliceEngine/Engine/Engine.vcxproj
@@ -147,12 +147,15 @@
     <ClInclude Include="Component\TextRenderComponent.h" />
     <ClInclude Include="Component\SpriteRenderer.h" />
     <ClInclude Include="Core\Input.h" />
+    <ClInclude Include="Component\Spine2DRenderComponent.h" />
+    <ClInclude Include="Core\Delegate.h" />
     <ClInclude Include="Helpers\FileHelper.h" />
     <ClInclude Include="Helpers\FFmpegHelper.h" />
     <ClInclude Include="Object\Camera.h" />
     <ClInclude Include="Component\RenderComponent.h" />
     <ClInclude Include="Component\ScriptComponent.h" />
     <ClInclude Include="Component\InputComponent.h" />
+    <ClInclude Include="Component\StatComponent.h" />
     <ClInclude Include="System\InputSystem.h" />
     <ClInclude Include="System\ScriptSystem.h" />
     <ClInclude Include="System\RenderSystem.h" />
@@ -183,12 +186,15 @@
     <ClCompile Include="Component\TextRenderComponent.cpp" />
     <ClCompile Include="Component\SpriteRenderer.cpp" />
     <ClCompile Include="Core\Input.cpp" />
+    <ClCompile Include="Component\Spine2DRenderComponent.cpp" />
+    <ClCompile Include="Core\Delegate.cpp" />
     <ClCompile Include="Helpers\FileHelper.cpp" />
     <ClCompile Include="Helpers\FFmpegHelper.cpp" />
     <ClCompile Include="Object\Camera.cpp" />
     <ClCompile Include="Component\RenderComponent.cpp" />
     <ClCompile Include="Component\ScriptComponent.cpp" />
     <ClCompile Include="Component\InputComponent.cpp" />
+    <ClCompile Include="Component\StatComponent.cpp" />
     <ClCompile Include="System\InputSystem.cpp" />
     <ClCompile Include="System\ScriptSystem.cpp" />
     <ClCompile Include="System\RenderSystem.cpp" />
